[package]
name = "smugmug"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest-oauth1 = "0.3.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
const_format = "0"
thiserror = "1"
url = "2"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3.6"
strum = "0.27"
strum_macros = "0.27"
num_enum = "0.7"

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["macros"] }
serde_json = "1"
anyhow = "1"
