[package]
name = "smugmug"
version = "0.7.0"
edition = "2024"

authors = ["Craig Hamilton <chamilton@craigscreations.com>"]
categories = ["development-tools"]
description = "SmugMug APIv2 Client Library"
documentation = "https://docs.rs/smugmug"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]
keywords = ["photo", "smugmug"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cch71/smugmug_rs.git"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"] # WASM and Rust

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = "2"
futures = "0.3"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
strum = "0.27"
strum_macros = "0.27"
num_enum = "0.7"
bytes = "1"
log = "0.4"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = { version = "0.9" }
urlencoding = "2.1"

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1"
anyhow = "1"
md5 = "0.8"
env_logger = "0.11"


[build-dependencies]

[[example]]
name = "upload_key_cleaner"
path = "./examples/upload_key_cleaner.rs"

[[example]]
name = "image_downloading"
path = "./examples/image_downloading.rs"
